--- a/views/manager/addUser.html
+++ b/views/manager/addUser.html
@@ -10,9 +10,11 @@
 
 <form class="layui-form" action="" style="margin-top: 20px;padding-right: 20px">
     <div class="layui-form-item">
+        <div class="layui-inline">
         <label class="layui-form-label" style="text-align: center">用户名</label>
         <div class="layui-input-block">
             <input type="text"  name="username" lay-verify="required" autocomplete="off" placeholder="请输入用户名" class="layui-input">
+        </div>
         </div>
     </div>
     <div class="layui-form-item">
