--- a/views/manager/layout.html
+++ b/views/manager/layout.html
@@ -5,6 +5,7 @@
     <title>后台管理</title>
     <link rel="icon" href="/public/images/title.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="/public/plugins/layui/css/layui.css">
+
     {% block head %}{% endblock %}
 
 </head>
@@ -68,6 +69,7 @@
 
 </body>
 <script src="/public/plugins/layui/layui.all.js"></script>
+<script src="/public/plugins/base64.js"></script>
 <script src="/public/js/manager/layout.js"></script>
 {% block js %}{% endblock %}
 </html>
