完成了周报管理的table

--- a/views/login.html
+++ b/views/login.html
@@ -27,7 +27,7 @@
                     <tr align="center">
                         <td>
                             <i style="background:url(/public/images/admin.png) no-repeat 5px 10px !important;"></i>
-                            <input type="text" autocomplete="off/on"  name="username" tabindex="1" autofocus placeholder="请输入账号" class="layui-input"/>
+                            <input type="text" autocomplete="off/on"  name="username" tabindex="1" autofocus placeholder="请输入账号" class="layui-input" style="padding-left: 0"/>
                         </td>
                     </tr>
                     <tr align="center">
