--- a/views/manager/addProject.html
+++ b/views/manager/addProject.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/public/css/admin/archive.css">
 </head>
 <body>
-<form class="layui-form" action="" style="margin-top: 20px;padding-right: 20px">
+<form class="layui-form" action="" style="margin-top: 20px;">
     <div class="layui-form-item">
         <label class="layui-form-label" style="text-align: center">项目名称</label>
         <div class="layui-input-inline" style="width: 280px;margin-right: 0">
@@ -21,7 +21,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label" style="text-align: center">项目描述</label>
         <div class="layui-input-block">
-            <textarea name="description" placeholder="请输入项目描述" class="layui-textarea" style="height: 220px;"></textarea>
+            <textarea name="description" placeholder="请输入项目描述" class="layui-textarea" style="height: 220px;width: 670px;"></textarea>
         </div>
     </div>
     <div class="layui-form-item">
@@ -41,7 +41,7 @@
     </div>
 
     <div class="layui-form-item">
-        <div class="layui-input-block" style="text-align: right;">
+        <div class="layui-input-block" style="text-align: right;padding-right: 20px;">
             <button class="layui-btn" lay-submit lay-filter="addProject" style="color: #fff;background: #1789FF;">提交</button>
             <button type="reset" class="layui-btn layui-btn-primary">重置</button>
         </div>
