--- a/views/manager/addUser.html
+++ b/views/manager/addUser.html
@@ -56,8 +56,9 @@
     </div>
     <div class="layui-form-item">
         <div class="layui-input-block">
-            <button class="layui-btn" lay-submit lay-filter="addUser" style="color: #fff;background: #1789FF;">添加</button>
-            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            <button type="reset" class="layui-btn layui-btn-primary" style="float: right;margin-left: 10px;">重置</button>
+            <button class="layui-btn" lay-submit lay-filter="addUser" style="color: #fff;background: #1789FF;float: right;">添加</button>
+
         </div>
     </div>
 </form>
