--- a/views/manager/editUser.html
+++ b/views/manager/editUser.html
@@ -55,8 +55,9 @@
     <input type="hidden" name="_id">
     <div class="layui-form-item">
         <div class="layui-input-block">
-            <button class="layui-btn" lay-submit lay-filter="editUser" style="color: #fff;background: #1789FF;">提交</button>
-            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            
+            <button type="reset" class="layui-btn layui-btn-primary" style="float: right;margin-left: 10px;">重置</button>
+            <button class="layui-btn" lay-submit lay-filter="editUser" style="color: #fff;background: #1789FF;float: right;">提交</button>
         </div>
     </div>
 </form>
