--- a/views/manager/layout.html
+++ b/views/manager/layout.html
@@ -48,7 +48,7 @@
                 <li class="layui-nav-item">
                     <a href="/manager/userList">人员管理</a>
                 </li>
-                <li class="layui-nav-item">
+                <li class="layui-nav-item" style="display: none;">
                     <a href="/manager/statistics">信息汇总</a>
                 </li>
             </ul>
